--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <title>Apoio N1 e N2 - TRT9</title>
     <meta charset="utf-8">
-    <link rel="icon" href="../Imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="../css/index.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/banner.css">
-    <script src="../js/script_index.js"></script>
-    <script src="../js/scroll.js"></script>
-    <script src="../js/ancoras.js"></script>
+    <link rel="icon" href="Imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/banner.css">
+    <script src="js/script_index.js"></script>
+    <script src="js/scroll.js"></script>
+    <script src="js/ancoras.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 
-    <script src="../js/redimensoes_footer_header.js"></script>
-    <script src="../js/header.js"></script><br>
+    <script src="js/redimensoes_footer_header.js"></script>
+    <script src="js/header.js"></script><br>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
@@ -633,6 +633,7 @@ document.addEventListener("DOMContentLoaded", function () {
         </div>
         <br>
     </article>
-    <script src="../js/footer.js"></script>
+    <script src="js/footer.js"></script>
 </body>
 </html>
+
