--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ document.addEventListener("DOMContentLoaded", function () {
                         <div class="caixa1">
                         </div>
                         <div class="caixa2">
-                            <a style="padding-right: 15px;" href='Paginas/paginan1.html'><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='imagens/apoion1.png' alt='N1' title='Acessar a Página de Orientações N1' width='220' height='120'></a>
+                            <a style="padding-right: 15px;" href='Paginas/paginan1.html'><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='Imagens/apoion1.png' alt='N1' title='Acessar a Página de Orientações N1' width='220' height='120'></a>
 
                             <a href='Paginas/paginan2.html'><img id="boxa2" style='border-radius: 5px; border-style: solid;' src='imagens/apoion2.png' alt='N2' title='Acessar a Página de Orientações N2' width='220' height='120'></a>
                         </div>
@@ -636,3 +636,4 @@ document.addEventListener("DOMContentLoaded", function () {
     <script src="js/footer_index.js"></script>
 </body>
 </html>
+
