--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -257,7 +257,7 @@
                                 
                                 <button id="botao_ver_imagem" onclick="toggleImagem()">Ver Imagem</button>
                                 <div class="imagem-container" id="imagemContainer">
-                                    <img src="../imagens/diagramapdpj.png" alt="Diagrama PDPJ">
+                                    <img src="../Imagens/diagramapdpj.png" alt="Diagrama PDPJ">
                                 </div></p>
                             </div><br>
                         </li>
