--- a/Paginas/paginan1.html
+++ b/Paginas/paginan1.html
@@ -3,7 +3,7 @@
 <head>
     <title>Apoio N1 - TRT9</title>
     <meta charset="utf-8">
-    <link rel="icon" href="../imagens/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../Imagens/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/paginan1.css">
@@ -135,40 +135,40 @@
 
                 <h2> <font size="4" style="font-family: Courier New, monospace"> ACESSO RÁPIDO - N1</font></h2><br>
                 <p align="left">
-                    <a href='https://powerbi.trt9.jus.br/paineis/powerbi/TIC/SCAM/SAINF%20-%20Estoque' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/sainf.png' alt='SAINF' title='Acessar o Controle de Estoque da SAINF' width='500' height='100'></a>
-                    <a href='https://layer8.trt9.jus.br/removermfavpn' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/layer8.png' alt='LAYER 8' title='Acesso ao LAYER 8' width='208' height='100'></a>
-                    <a href='https://powerbi.trt9.jus.br/paineis/powerbi/TIC/SCAM/Monitoramento' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/pbi.png' alt='Power BI' title='Acesso ao Power BI TRT9' width='100' height='100'></a>
-                    <a href='https://trt9-techcom.treetools.com.br/sb3/pages/inicio.zul' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/chat.png' alt='Chat' title='Acessar o Chat da CSTI' width='100' height='100'></a>
-                    <a href='https://www.trt9.jus.br/cswiki/index.php/P%C3%A1gina_principal' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/cswiki.png' alt='CSWIKI' title='Acesso a Página CSWIKI' width='100' height='100'></a>
-                    <a href='https://csti.trt9.jus.br/assystweb' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/assyst.png' alt='Assyst' title='Acesso ao Assyst' width='200' height='100'></a>
-                    <a href='https://chatgpt.com/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/chatgpt.jpg' alt='ChatGPT' title='Acesso ao ChatGPT' width='172' height='100'></a>
+                    <a href='https://powerbi.trt9.jus.br/paineis/powerbi/TIC/SCAM/SAINF%20-%20Estoque' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/sainf.png' alt='SAINF' title='Acessar o Controle de Estoque da SAINF' width='500' height='100'></a>
+                    <a href='https://layer8.trt9.jus.br/removermfavpn' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/layer8.png' alt='LAYER 8' title='Acesso ao LAYER 8' width='208' height='100'></a>
+                    <a href='https://powerbi.trt9.jus.br/paineis/powerbi/TIC/SCAM/Monitoramento' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/pbi.png' alt='Power BI' title='Acesso ao Power BI TRT9' width='100' height='100'></a>
+                    <a href='https://trt9-techcom.treetools.com.br/sb3/pages/inicio.zul' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/chat.png' alt='Chat' title='Acessar o Chat da CSTI' width='100' height='100'></a>
+                    <a href='https://www.trt9.jus.br/cswiki/index.php/P%C3%A1gina_principal' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/cswiki.png' alt='CSWIKI' title='Acesso a Página CSWIKI' width='100' height='100'></a>
+                    <a href='https://csti.trt9.jus.br/assystweb' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/assyst.png' alt='Assyst' title='Acesso ao Assyst' width='200' height='100'></a>
+                    <a href='https://chatgpt.com/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/chatgpt.jpg' alt='ChatGPT' title='Acesso ao ChatGPT' width='172' height='100'></a>
                 </p><br><br><br>
 
                 <h2 style='color: black;'><font size="4" style="font-family: Courier New, monospace;"> ACESSO RÁPIDO - LINKS DE CONSULTA DE DADOS </font></h2><br>
                 <p align="left">
-                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=154:18:300768478516057:::::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/adm.png' alt='SMP e CMDB' title='Acesso ao SMP e CMDB' width='200' height='100'></a>
-                    <a href='https://web01/gertoken/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/gertoken.png' alt='Gertoken' title='Acesso ao Gerenciamento de Token' width='200' height='100'></a>
-                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=225:3:207639063515661:::3::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/suspencao.png' alt='Suspensão Intranet' title='Acesso a Página de Suspensão' width='285' height='100'></a>
-                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=285:379:201832757970539:::::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/telefones.png' alt='Contatos' title='Consulta a Contatos de Unidades e Servidores' width='200' height='100'></a>
-                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=10285:5:112883424524121:::::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/ramais_servidores.png' alt='Ramais de Servidores' title='Consulta a Ramais de Servidores' width='270' height='100'></a>
-                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=10285:4:112883424524121:::::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/ramais_unidades.png' alt='Ramais de Unidades' title='Consulta a Ramais de Unidades' width='215' height='100'></a>
+                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=154:18:300768478516057:::::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/adm.png' alt='SMP e CMDB' title='Acesso ao SMP e CMDB' width='200' height='100'></a>
+                    <a href='https://web01/gertoken/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/gertoken.png' alt='Gertoken' title='Acesso ao Gerenciamento de Token' width='200' height='100'></a>
+                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=225:3:207639063515661:::3::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/suspencao.png' alt='Suspensão Intranet' title='Acesso a Página de Suspensão' width='285' height='100'></a>
+                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=285:379:201832757970539:::::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/telefones.png' alt='Contatos' title='Consulta a Contatos de Unidades e Servidores' width='200' height='100'></a>
+                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=10285:5:112883424524121:::::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/ramais_servidores.png' alt='Ramais de Servidores' title='Consulta a Ramais de Servidores' width='270' height='100'></a>
+                    <a href='https://intranet.trt9.jus.br/intranet2/f?p=10285:4:112883424524121:::::' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/ramais_unidades.png' alt='Ramais de Unidades' title='Consulta a Ramais de Unidades' width='215' height='100'></a>
                 </p>
                 <br><br><br>
 
                 <h2 style='color: black;'><font size="4" style="font-family: Courier New, monospace;"> ACESSO RÁPIDO - LINKS DE CONSULTA DE INFORMAÇÕES </font></h2><br>
                 <p align="left">
-                    <a href='https://www.trt9.jus.br/pautaeletronica/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/pauta_eletronica.png' alt='Pauta Eletrônica' title='Acesso a Pauta Eletrônica' width='200' height='100'></a>
-                    <a href='https://www.trt9.jus.br/pautaeletronica/pautaSessao.xhtml' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/pauta_sessoes.png' alt='Pauta de Sessões' title='Acesso a Pauta de Sessões' width='200' height='100'></a>
-                    <a href='https://www.trt9.jus.br/portal/balcaoVirtual.xhtml' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/balcao.png' alt='Balcão Virtual do TRT9' title='Acesso ao Balcão Virtual' width='280' height='100'></a>
-                    <a href='https://www.trt9.jus.br/portal/paginaDownload.xhtml?id=1261' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/pje.png' alt='PJe Indisponibilidade' title='Consulta Certidões de Indisponibilidade' width='160' height='100'></a>
-                    <a href='https://pje-treinamento.trt9.jus.br/trt/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/pjetreinamento.png' alt='PJe Treinamento' title='Acesso ao PJe Treinamento' width='260' height='100'></a>
-                    <a href='https://pje.trt9.jus.br/consultaprocessual/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/pjeconsulta.png' alt='PJe Consulta Processual' title='Acesso a Consulta Processual PJe' width='260' height='100'></a>
+                    <a href='https://www.trt9.jus.br/pautaeletronica/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/pauta_eletronica.png' alt='Pauta Eletrônica' title='Acesso a Pauta Eletrônica' width='200' height='100'></a>
+                    <a href='https://www.trt9.jus.br/pautaeletronica/pautaSessao.xhtml' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/pauta_sessoes.png' alt='Pauta de Sessões' title='Acesso a Pauta de Sessões' width='200' height='100'></a>
+                    <a href='https://www.trt9.jus.br/portal/balcaoVirtual.xhtml' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/balcao.png' alt='Balcão Virtual do TRT9' title='Acesso ao Balcão Virtual' width='280' height='100'></a>
+                    <a href='https://www.trt9.jus.br/portal/paginaDownload.xhtml?id=1261' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/pje.png' alt='PJe Indisponibilidade' title='Consulta Certidões de Indisponibilidade' width='160' height='100'></a>
+                    <a href='https://pje-treinamento.trt9.jus.br/trt/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/pjetreinamento.png' alt='PJe Treinamento' title='Acesso ao PJe Treinamento' width='260' height='100'></a>
+                    <a href='https://pje.trt9.jus.br/consultaprocessual/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/pjeconsulta.png' alt='PJe Consulta Processual' title='Acesso a Consulta Processual PJe' width='260' height='100'></a>
                 </p>
                 <br><br>
 
                 <h2> <font size="4" style="font-family: Courier New, monospace"> DÚVIDAS - PLATAFORMA GOOGLE WORKSPACE</font></h2><br>
                 <p align="left">
-                    <a href='https://aprendizagem.rw3tecnologia.com/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../imagens/rw3.png' alt='RW3' title='Aprendizagem RW3' width='500' height='80'></a>
+                    <a href='https://aprendizagem.rw3tecnologia.com/' target="_blank"><img id="boxa1" style='border-radius: 5px; border-style: solid;' src='../Imagens/rw3.png' alt='RW3' title='Aprendizagem RW3' width='500' height='80'></a>
                 </p><br><br><br>
             </div>
             <div id="divisao_2">
@@ -253,14 +253,14 @@
                                         <td align="left" style="border: none;">
                                             <a href="https://docs.google.com/spreadsheets/d/177A-isBNle3KCjzltfI9U5B8Zwb7KG1dPMJtyzWX640/edit#gid=1680740765" target="_blank">
                                                 <button id="button-2a">
-                                                    <img src="../imagens/excel.png" alt="Planilha Excel" /><b style="font-family: Arial, Helvetica, sans-serif">&nbsp;Planilha de Softwares Homologados</b>
+                                                    <img src="../Imagens/excel.png" alt="Planilha Excel" /><b style="font-family: Arial, Helvetica, sans-serif">&nbsp;Planilha de Softwares Homologados</b>
                                                 </button>
                                             </a>
                                         </td>
                                         <td align="left" style="border: none;">
                                             <a href="https://docs.google.com/spreadsheets/d/1HfCu5EXuvCQSOuCFj785WCsl3jzJcFNXoetlleDq0Iw/edit?gid=0#gid=0" target="_blank">
                                                 <button id="button-2a">
-                                                    <img src="../imagens/excel.png" alt="Planilha Excel" /><b style="font-family: Arial, Helvetica, sans-serif">&nbsp;Planilha de Acompanhamentos Urgentes</b>
+                                                    <img src="../Imagens/excel.png" alt="Planilha Excel" /><b style="font-family: Arial, Helvetica, sans-serif">&nbsp;Planilha de Acompanhamentos Urgentes</b>
                                                 </button>
                                             </a>
                                         </td>
