--- a/Paginas/procedimentos.html
+++ b/Paginas/procedimentos.html
@@ -3,7 +3,7 @@
 <head>
     <title>Procedimentos</title>
     <meta charset="utf-8">
-    <link rel="icon" href="../Imagens/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../Imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/style4.css">
     <script src="../js/script2.js"></script>
