--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -4,7 +4,7 @@
 <head>
     <title>Apoio N1 e N2 - TRT9</title>
     <meta charset="utf-8">
-    <link rel="icon" href="../Imagens/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../Imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/styles.css">
     <script src="../js/script_index.js"></script>
