--- a/Paginas/calculo.html
+++ b/Paginas/calculo.html
@@ -3,7 +3,7 @@
 <head>
     <title>Cálculo F</title>
     <meta charset="utf-8">
-    <link rel="icon" href="../Imagens/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../Imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/style5.css">
     <script src="../js/script.js"></script>
