--- a/Paginas/malote.html
+++ b/Paginas/malote.html
@@ -4,7 +4,7 @@
 <head>
     <title>Malote</title>
     <meta charset="utf-8">
-    <link rel="icon" href="../Imagens/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../Imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/style3.css">
     <script src="../js/script2.js"></script>
