--- a/Paginas/paginan1.html
+++ b/Paginas/paginan1.html
@@ -3,7 +3,7 @@
 <head>
     <title>Apoio N1 - TRT9</title>
     <meta charset="utf-8">
-    <link rel="icon" href="../Imagens/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../Imagens/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/paginan1.css">
