--- a/Paginas/suspensao.html
+++ b/Paginas/suspensao.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="icon" href="../Imagens/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="../Imagens/favicon.png" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="../css/estilo.css">
 	<link rel="stylesheet" type="text/css" href="../css/index.css">
 	<script src="../js/script2.js"></script>
