--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Apoio N1 e N2 - TRT9</title>
     <meta charset="utf-8">
-    <link rel="icon" href="Imagens/favicon.png" type="image/x-icon">
+    <link rel="icon" type="image/png" href="Imagens/favicon.png">
+    <link rel="shortcut icon" href="Imagens/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/header.css">
@@ -636,3 +637,4 @@ document.addEventListener("DOMContentLoaded", function () {
     <script src="js/footer_index.js"></script>
 </body>
 </html>
+
