--- a/Paginas/cidades.html
+++ b/Paginas/cidades.html
@@ -3,7 +3,8 @@
 <head>
     <title>Siglas de Cidades</title>
     <meta charset="utf-8">
-    <link rel="icon" href="../Imagens/favicon.png" type="image/x-icon">
+    <link rel="icon" type="image/png" href="../Imagens/favicon.png">
+    <link rel="shortcut icon" href="../Imagens/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/style4.css">
     <link rel="stylesheet" href="../css/style_cidade.css">
