--- a/Paginas/paginan1.html
+++ b/Paginas/paginan1.html
@@ -3,13 +3,14 @@
 <head>
     <title>Apoio N1 - TRT9</title>
     <meta charset="utf-8">
-    <link rel="icon" href="../Imagens/favicon.png" type="image/x-icon">
+    <link rel="icon" type="image/png" href="../Imagens/favicon.png">
+    <link rel="shortcut icon" href="../Imagens/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/paginan1.css">
     <link rel="stylesheet" href="../css/sistemas.css">
     <script src="../js/script4.js"></script>
-    <script src="../js/script_index.js"></script>
+    <script src="../js/script_paginasn1-2.js"></script>
     <script src="../js/scroll.js"></script>
     <script src="../js/ancoras.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
