--- a/Paginas/sessao.html
+++ b/Paginas/sessao.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="icon" href="../Imagens/favicon.png" type="image/x-icon">
+	<link rel="icon" type="image/png" href="../Imagens/favicon.png">
+    <link rel="shortcut icon" href="../Imagens/favicon.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="../css/estilo3.css">
 	<link rel="stylesheet" type="text/css" href="../css/index.css">
 	<script src="../js/script2.js"></script>
