Ajuste nos avisos

--- a/index.html
+++ b/index.html
@@ -298,6 +298,16 @@ document.addEventListener("DOMContentLoaded", function () {
                             </p><br>
                         </li>
 
+                        <li>
+                            <p>
+                                <font size="4" style="font-family: Arial">
+                                    <b style="font-family: Arial">FALHA GERAL: </b> "Problemas para se logar na VPN" - Ocorre somente em equipamentos dentro do domínio do TRT9.                                    
+                                    <br>Tarefa de Referência: <b style="font-family: Arial">542801</b>.
+                                    Data: <b style="font-family: Arial"> 15/12/2025</b>.
+                                </font>
+                            </p><br>
+                        </li>
+
                         <p><a id="link-consultar-avisos" href="Paginas/avisos.html">Consultar avisos anteriores...</a></p>
                     </ul>
 
