Ajustes nos avisos

--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -274,7 +274,7 @@
                         <li>
                             <p>
                                 <font size="4" style="font-family: Arial">
-                                    <b style="font-family: Arial">COMUNICADO: </b> "Erro ao realizar solicitação de esclarecimentos" - Será solucionado somente com a versão 2.18.3 do PJe. 
+                                    <b style="font-family: Arial">ORIENTAÇÃO: </b> "Erro ao realizar solicitação de esclarecimentos" - Será solucionado somente com a versão 2.18.3 do PJe. 
                                     Tarefa de Referência: <b style="font-family: Arial">542366</b>.
                                     Data: <b style="font-family: Arial"> 05/12/2025</b>.
                                 </font>
