--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ document.addEventListener("DOMContentLoaded", function () {
                         <li>
                             <p>
                                 <font size="4" style="font-family: Arial">
-                                    <b style="font-family: Arial">COMUNICADO: </b> "Erro ao realizar solicitação de esclarecimentos" - Será solucionado somente com a versão 2.18.3 do PJe. 
+                                    <b style="font-family: Arial">ORIENTAÇÃO: </b> "Erro ao realizar solicitação de esclarecimentos" - Será solucionado somente com a versão 2.18.3 do PJe. 
                                     <br>Tarefa de Referência: <b style="font-family: Arial">542366</b>.
                                     Data: <b style="font-family: Arial"> 05/12/2025</b>.
                                 </font>
