--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         overflow-y: auto;   /* ✅ barra de rolagem */
         overflow-x: hidden;
 
-        padding-top: 50px;
+        padding-top: 60px;
         padding-left: 20px;
         z-index: 9998;
 
@@ -183,6 +183,19 @@
     float: right;
 
     z-index: 9999;
+}
+
+.fullscreen-panel .painel-avisos {
+    max-height: calc(100vh - 120px);
+    overflow-y: auto;
+
+    /* Ocultar scrollbar */
+    scrollbar-width: none;        /* Firefox */
+    -ms-overflow-style: none;     /* Internet Explorer / Edge antigo */
+}
+
+.fullscreen-panel .painel-avisos::-webkit-scrollbar {
+    display: none;                /* Chrome, Edge, Safari */
 }
     </style>
 
@@ -278,7 +291,7 @@ document.addEventListener("DOMContentLoaded", function () {
         <article id="article-f">
             
             <div class="painel-avisos" style='background-color:#FFF5EE;  border-radius: 10px;'>
-                <div id="div3">
+                <div id="div3" style="margin-bottom: 0px;">
                     <h2> <font size="4" style="font-family: Courier New, monospace; color: #ef314c;"> AVISOS!</font></h2><br>
                     <ul style="padding: 0px 30px 30px 30px;">
 
