--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         overflow-y: auto;   /* ✅ barra de rolagem */
         overflow-x: hidden;
 
-        padding-top: 60px;
+        padding-top: 65px;
         padding-left: 20px;
         z-index: 9998;
 
@@ -304,7 +304,7 @@ document.addEventListener("DOMContentLoaded", function () {
                             <p>
                                 <font size="4" style="font-family: Arial">
                                     <b style="font-family: Arial">ORIENTAÇÃO: </b> "Erro ao realizar solicitação de esclarecimentos" - Será solucionado somente com a versão 2.18.3 do PJe. 
-                                    <br>Tarefa de Referência: <b style="font-family: Arial">542366</b>.
+                                    Tarefa de Referência: <b style="font-family: Arial">542366</b>.
                                     Data: <b style="font-family: Arial"> 05/12/2025</b>.
                                 </font>
                             </p><br>
@@ -336,7 +336,7 @@ document.addEventListener("DOMContentLoaded", function () {
                             <p>
                                 <font size="4" style="font-family: Arial">
                                     <b style="font-family: Arial">FALHA GERAL: </b> "Problemas para se logar na VPN" - Ocorre somente em equipamentos dentro do domínio do TRT9.                                    
-                                    <br>Tarefa de Referência: <b style="font-family: Arial">542801</b>.
+                                    Tarefa de Referência: <b style="font-family: Arial">542801</b>.
                                     Data: <b style="font-family: Arial"> 15/12/2025</b>.
                                 </font>
                             </p><br>
