--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -280,6 +280,15 @@
                                 </font>
                             </p><br>
                         </li>
+                        <li>
+                            <p>
+                                <font size="4" style="font-family: Arial">
+                                    <b style="font-family: Arial">FALHA GERAL: </b> "Problemas para se logar na VPN" - Ocorre somente em equipamentos dentro do domínio do TRT9.                                    
+                                    Tarefa de Referência: <b style="font-family: Arial">542801</b>.
+                                    Data: <b style="font-family: Arial"> 15/12/2025</b>.
+                                </font>
+                            </p><br>
+                        </li>
                     </ul>
                 </div>
             </div>
