--- a/index.html
+++ b/index.html
@@ -208,6 +208,16 @@ document.addEventListener("DOMContentLoaded", function () {
                             </p><br>
                         </li>
 
+                        <li>
+                            <p>
+                                <font size="4" style="font-family: Arial">
+                                    <b style="font-family: Arial">FALHA GERAL: </b> "Problemas para Recebimento de Emails (2FA)". 
+                                    Tarefa de Referência: <b style="font-family: Arial">542951</b>.
+                                    Data: <b style="font-family: Arial"> 16/12/2025</b>.
+                                </font>
+                            </p><br>
+                        </li>
+
                         <p><a id="link-consultar-avisos" href="Paginas/avisos.html">Consultar avisos anteriores...</a></p>
                     </ul>
 
