--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Versionamento JS e CSS-->
     
     <link rel="stylesheet" href="index.css?v=0.1.9">
+    <link rel="stylesheet" href="styles.css?v=0.1.9">
     <script src="script_index.js?v=0.1.9" defer></script>
 </head>
 <body>
