--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -53,7 +53,7 @@
             <div style='background-color:#FFF5EE;  border-radius: 10px;'>
                 <div id="div3">
                     <h2> <font size="4" style="font-family: Courier New, monospace; color: #ef314c;"> AVISOS!</font></h2><br>
-                    <ul style="padding-left: 10px;">
+                    <ul class="painel-de-avisos" style="padding-left: 10px;">
                         <li>
                             <p>
                                 <font size="4" style="font-family: Arial">
@@ -280,15 +280,16 @@
                                 </font>
                             </p><br>
                         </li>
-                        <li>
-                            <p>
-                                <font size="4" style="font-family: Arial">
-                                    <b style="font-family: Arial">FALHA GERAL: </b> "Problemas para se logar na VPN" - Ocorre somente em equipamentos dentro do domínio do TRT9.                                    
-                                    Tarefa de Referência: <b style="font-family: Arial">542801</b>.
-                                    Data: <b style="font-family: Arial"> 15/12/2025</b>.
-                                </font>
-                            </p><br>
-                        </li>
+                        <li class="aviso" data-data="2025-12-09">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problemas para se logar na VPN" - Ocorre somente em equipamentos dentro do domínio do TRT9.
+                                      Tarefa de Referência:
+                               <span class="aviso-tarefa">542801</span>.
+                                      Data:
+                               <span class="aviso-data">09/12/2025</span>.
+                            </p>
+                        </li><br>
                     </ul>
                 </div>
             </div>
