--- a/index.html
+++ b/index.html
@@ -146,45 +146,48 @@ document.addEventListener("DOMContentLoaded", function () {
             <div class="painel-avisos" style='background-color:#FFF5EE;  border-radius: 10px;'>
                 <div id="div3" style="margin-bottom: 0px;">
                     <h2> <font size="4" style="font-family: Courier New, monospace; color: #ef314c;"> AVISOS!</font></h2><br>
-                    <ul style="padding: 0px 30px 30px 30px;">
+                    <ul class="painel-de-avisos" style="padding: 0px 20px 20px 20px;">
 
                         <!-- 
                         <li><p><font size="4" style="font-family: Arial">Sem novos avisos.</font></p></li><br>
                         -->
 
-                        <!-- -->
-                        
-                        <li>
-                            <p>
-                                <font size="4" style="font-family: Arial">
-                                    <b style="font-family: Arial">ORIENTAÇÃO: </b> "Problema de Habilitação no PJe" - É um defeito da versão atual e será corrigido futuramente. Para evitar, finalize a Solicitação de 
-                                    Habilitação no mesmo momento em que iniciar. Se o erro já ocorreu, tente novamente após 1 hora; se persistir, contate a Vara ou Gabinete responsável. 
-                                    <br>Tarefa de Referência: <b style="font-family: Arial">541237</b>.
-                                    Data: <b style="font-family: Arial"> 09/12/2025</b>.
-                                </font>
-                            </p><br>
-                        </li>
+                        <!-- -->                    
 
-                        <li>
-                            <p>
-                                <font size="4" style="font-family: Arial">
-                                    <b style="font-family: Arial">ORIENTAÇÃO: </b> "Problemas para Designação de Perícias no PJe" - É um defeito da versão atual e será corrigido futuramente. Seguir conforme procedimento:
-                                    <a id="a_avisos" href="https://www.trt9.jus.br/cswiki/index.php?curid=35149" target="_blank">Sistema - PJe - Erro na Designação da Perícia</a>.
-                                    <br>Tarefa de Referência: <b style="font-family: Arial">541276</b>.
-                                    Data: <b style="font-family: Arial"> 09/12/2025</b>.
-                                </font>
-                            </p><br>
-                        </li>
+                        <li class="aviso" data-data="2025-12-09">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">ORIENTAÇÃO:</span>
+                                     "Problema de Habilitação no PJe" - É um defeito da versão atual e será corrigido futuramente. Para evitar, finalize a Solicitação de 
+                                      Habilitação no mesmo momento em que iniciar. Se o erro já ocorreu, tente novamente após 1 hora; se persistir, contate a Vara ou Gabinete responsável. 
+                                      Tarefa de Referência:
+                                      <span class="aviso-tarefa">541237</span>.
+                                      Data:
+                               <span class="aviso-data">09/12/2025</span>.
+                            </p>
+                        </li><br>
 
-                        <li>
-                            <p>
-                                <font size="4" style="font-family: Arial">
-                                    <b style="font-family: Arial">FALHA GERAL: </b> "Problemas para Recebimento de Emails (2FA)". 
-                                    Tarefa de Referência: <b style="font-family: Arial">542951</b>.
-                                    Data: <b style="font-family: Arial"> 16/12/2025</b>.
-                                </font>
-                            </p><br>
-                        </li>
+                        <li class="aviso" data-data="2025-12-09">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">ORIENTAÇÃO:</span>
+                                     "Problemas para Designação de Perícias no PJe" - É um defeito da versão atual e será corrigido futuramente. Seguir conforme procedimento:
+                                      <a id="a_avisos" href="https://www.trt9.jus.br/cswiki/index.php?curid=35149" target="_blank">Sistema - PJe - Erro na Designação da Perícia</a>.
+                                      Tarefa de Referência:
+                               <span class="aviso-tarefa">541276</span>.
+                                      Data:
+                               <span class="aviso-data">09/12/2025</span>.
+                            </p>
+                        </li><br>
+
+                        <li class="aviso" data-data="2025-12-16">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problemas para Recebimento de Emails (2FA)".
+                                      Tarefa de Referência:
+                               <span class="aviso-tarefa">542951</span>.
+                                      Data:
+                               <span class="aviso-data">16/12/2025</span>.
+                            </p>
+                        </li><br>
 
                         <p><a id="link-consultar-avisos" href="Paginas/avisos.html">Consultar avisos anteriores...</a></p>
                     </ul>
