--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <!-- Versionamento JS e CSS-->
     
-    <link rel="stylesheet" href="index.css?v=0.1.10">
-    <link rel="stylesheet" href="styles.css?v=0.1.10">
+    <link rel="stylesheet" href="index.css?v=0.1.11">
+    <link rel="stylesheet" href="styles.css?v=0.1.11">
     <script src="script_index.js?v=0.1.9" defer></script>
 </head>
 <body>
@@ -159,7 +159,7 @@ document.addEventListener("DOMContentLoaded", function () {
                                <span class="aviso-titulo">ORIENTAÇÃO:</span>
                                      "Problema de Habilitação no PJe" - É um defeito da versão atual e será corrigido futuramente. Para evitar, finalize a Solicitação de 
                                       Habilitação no mesmo momento em que iniciar. Se o erro já ocorreu, tente novamente após 1 hora; se persistir, contate a Vara ou Gabinete responsável. 
-                                      Tarefa de Referência:
+                                      Tarefa:
                                       <span class="aviso-tarefa">541237</span>.
                                       Data:
                                <span class="aviso-data">09/12/2025</span>.
@@ -171,21 +171,10 @@ document.addEventListener("DOMContentLoaded", function () {
                                <span class="aviso-titulo">ORIENTAÇÃO:</span>
                                      "Problemas para Designação de Perícias no PJe" - É um defeito da versão atual e será corrigido futuramente. Seguir conforme procedimento:
                                       <a id="a_avisos" href="https://www.trt9.jus.br/cswiki/index.php?curid=35149" target="_blank">Sistema - PJe - Erro na Designação da Perícia</a>.
-                                      Tarefa de Referência:
+                                      Tarefa:
                                <span class="aviso-tarefa">541276</span>.
                                       Data:
                                <span class="aviso-data">09/12/2025</span>.
-                            </p>
-                        </li><br>
-
-                        <li class="aviso" data-data="2025-12-16">
-                            <p class="aviso-texto">
-                               <span class="aviso-titulo">FALHA GERAL:</span>
-                                     "Problemas para Recebimento de Emails (2FA)".
-                                      Tarefa de Referência:
-                               <span class="aviso-tarefa">542951</span>.
-                                      Data:
-                               <span class="aviso-data">16/12/2025</span>.
                             </p>
                         </li><br>
 
