--- a/Paginas/avisos.html
+++ b/Paginas/avisos.html
@@ -11,6 +11,7 @@
     <script src="../js/script_index.js"></script>
     <script src="../js/scroll.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.1/font/bootstrap-icons.min.css">
 </head>
 <body onload="javascript:lerMais1a(); javascript:lerMais2a(); javascript:lerMais3a(); javascript:lerMais4a(); javascript:lerMais5a();">
 
@@ -41,6 +42,29 @@
             }
         });
     </script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+        const elemento = document.getElementById('exportarLista');
+        if (!elemento) return;
+
+        let posicao = 0;
+        let el = elemento;
+
+        while (el) {
+            posicao += el.offsetTop;
+            el = el.offsetParent;
+        }
+
+        const offset = 1200; // ajuste fino aqui
+
+        window.scrollTo({
+            top: posicao - offset,
+            behavior: 'smooth'
+        });
+        });
+    </script>
+
 
     <article id="article-b">
         <br><br>
@@ -262,36 +286,107 @@
                                 </div></p>
                             </div><br>
                         </li>
-                        <li>
-                            <p>
-                                <font size="4" style="font-family: Arial">
-                                    <b style="font-family: Arial">COMUNICADO: </b> Fórum de Marechal Cândido Rondon sem Comunicação - 
-                                    <a id="a_avisos" href="https://csti.trt9.jus.br/assystweb/application.do#event%2FDisplayEvent.do%3Fdispatch%3DgetEvent%26eventId%3D10542274%26checkJukeBoxSettings%3Dtrue%26resultSet%3D" target="_blank">542274</a>.
-                                    Data: <b style="font-family: Arial"> 04/12/2025</b>.
-                                </font>
-                            </p><br>
-                        </li>
-                        <li>
-                            <p>
-                                <font size="4" style="font-family: Arial">
-                                    <b style="font-family: Arial">ORIENTAÇÃO: </b> "Erro ao realizar solicitação de esclarecimentos" - Será solucionado somente com a versão 2.18.3 do PJe. 
-                                    Tarefa de Referência: <b style="font-family: Arial">542366</b>.
-                                    Data: <b style="font-family: Arial"> 05/12/2025</b>.
-                                </font>
-                            </p><br>
-                        </li>
+                        <li class="aviso" data-data="2025-12-04">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Fórum de Marechal Cândido Rondon sem Comunicação".
+                                      Tarefa:
+                               <span class="aviso-tarefa">542274</span>.
+                                      Data:
+                               <span class="aviso-data">04/12/2025</span>.
+                            </p>
+                        </li><br>
+                        <li class="aviso" data-data="2025-12-05">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">ORIENTAÇÃO:</span>
+                                     "Erro ao realizar solicitação de esclarecimentos" - Será solucionado somente com a versão 2.18.3 do PJe.
+                                      Tarefa:
+                               <span class="aviso-tarefa">542366</span>.
+                                      Data:
+                               <span class="aviso-data">05/12/2025</span>.
+                            </p>
+                        </li><br>
                         <li class="aviso" data-data="2025-12-09">
                             <p class="aviso-texto">
                                <span class="aviso-titulo">FALHA GERAL:</span>
                                      "Problemas para se logar na VPN" - Ocorre somente em equipamentos dentro do domínio do TRT9.
-                                      Tarefa de Referência:
+                                      Tarefa:
                                <span class="aviso-tarefa">542801</span>.
                                       Data:
                                <span class="aviso-data">09/12/2025</span>.
                             </p>
                         </li><br>
+                        <li class="aviso" data-data="2025-12-16">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problemas para Recebimento de Emails (2FA)".
+                                      Tarefa:
+                               <span class="aviso-tarefa">542951</span>.
+                                      Data:
+                               <span class="aviso-data">16/12/2025</span>.
+                            </p>
+                        </li><br>
                     </ul>
                 </div>
+
+        <button id="exportarLista"onclick="exportarCSV()"><i class="bi bi-file-earmark-excel"></i> Exportar</button>
+
+<script>
+function exportarCSV() {
+  const avisos = document.querySelectorAll('.aviso');
+
+  // UTF-8 (corrige acentuação no Excel)
+  let csv = '\uFEFFMotivo;Descricao;Tarefa;Data\n';
+
+  avisos.forEach(aviso => {
+    const motivo = aviso.querySelector('.aviso-titulo')?.innerText.replace(':','') || '';
+    const tarefa = aviso.querySelector('.aviso-tarefa')?.innerText || '';
+    const data = aviso.dataset.data || '';
+
+    const descricao = aviso.querySelector('.aviso-texto')
+      .innerText
+      .replace(/\n/g, ' ')
+      .replace(/;/g, ',');
+
+    csv += `"${motivo}";"${descricao}";"${tarefa}";"${data}"\n`;
+  });
+
+  const blob = new Blob([csv], {
+    type: 'text/csv;charset=utf-8;'
+  });
+
+  const url = URL.createObjectURL(blob);
+
+  const link = document.createElement('a');
+  link.href = url;
+  link.download = 'painel_avisos.csv';
+  link.click();
+
+  URL.revokeObjectURL(url);
+}
+</script>
+
+    <!-- Estilo do Botão Exportar -->
+    <style>
+        #exportarLista {
+            margin-top: 35px;
+            margin-right: 0px;
+            margin-bottom: 5px;
+            padding: 8px 14px;
+            border-radius: 8px;
+            border: none;
+            background-color: #333;
+            color: white;
+            font-size: 14px;
+            cursor: pointer;
+            opacity: 0.85;
+            float: right;
+        }
+        #exportarLista:hover {
+            opacity: 1;
+        }
+    </style>
+
             </div>
 
 
