--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <!-- Versionamento JS e CSS-->
     
-    <link rel="stylesheet" href="index.css?v=0.1.11">
-    <link rel="stylesheet" href="styles.css?v=0.1.11">
+    <link rel="stylesheet" href="index.css?v=0.1.12">
+    <link rel="stylesheet" href="styles.css?v=0.1.12">
     <script src="script_index.js?v=0.1.9" defer></script>
 </head>
 <body>
@@ -175,6 +175,17 @@ document.addEventListener("DOMContentLoaded", function () {
                                <span class="aviso-tarefa">541276</span>.
                                       Data:
                                <span class="aviso-data">09/12/2025</span>.
+                            </p>
+                        </li><br>
+
+                        <li class="aviso" data-data="2025-12-16">
+                            <p class="aviso-texto">
+                               <span class="aviso-titulo">FALHA GERAL:</span>
+                                     "Problema no sistema de Telefonia" - Erro ao tentar realizar e receber ligações externas e internas.
+                                      Tarefa:
+                               <span class="aviso-tarefa">543067</span>.
+                                      Data:
+                               <span class="aviso-data">16/12/2025</span>.
                             </p>
                         </li><br>
 
